<resources>
    <string name="app_name">PokemonApp</string>

    <string name="title">Pokemon App</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="pokemon_filter">Filter list</string>
    <string name="types">Types</string>
    <string name="levels">Level</string>
    <string name="hp">HP</string>
    <string name="not_available">Not Available</string>
    
    <string name="abilities">Abilities</string>
    <string name="attacks">Attacks</string>
    <string name="sub_types">Sub Types</string>
    <string name="resistances">Resistances</string>
    <string name="weaknesses">Weaknesses</string>
    <string name="default_error_message">Something went wrong</string>
    <string name="close_icon">Close Icon</string>
    <string name="apply">Apply</string>
</resources>