<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.PokemonDetailsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="60dp"
            app:contentInsetLeft="0dp"
            android:background="@color/purple_700"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:contentDescription="@string/pokemon_filter"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Pikachu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/main_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/pokemon_image"
                    android:src="@drawable/no_image_placeholder"/>

                <TextView
                    android:id="@+id/types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/types"
                    app:layout_constraintTop_toBottomOf="@id/main_image"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/types_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/types"
                    android:layout_marginTop="10dp"/>

                <View
                    android:id="@+id/divider_one"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/types_recycler"/>

                <TextView
                    android:id="@+id/hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_one"
                    android:text="@string/hp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/hp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hp"
                    tools:text="730"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <View
                    android:id="@+id/divider_three"
                    android:layout_width="1dp"
                    android:layout_height="70dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_one"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey"/>

                <TextView
                    android:id="@+id/level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/divider_three"
                    app:layout_constraintTop_toBottomOf="@id/divider_one"
                    android:text="@string/levels"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/level_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/divider_three"
                    app:layout_constraintTop_toBottomOf="@id/level"
                    tools:text="83"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <View
                    android:id="@+id/divider_two"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/hp_value"/>

                <TextView
                    android:id="@+id/abilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_two"
                    android:text="@string/abilities"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/abilities_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/abilities"
                    android:layout_marginTop="10dp"/>

                <View
                    android:id="@+id/divider_four"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/abilities_recycler"/>

                <TextView
                    android:id="@+id/attacks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_four"
                    android:text="@string/attacks"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/attacks_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/attacks"
                    android:layout_marginTop="10dp"/>

                <View
                    android:id="@+id/divider_five"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/attacks_recycler"/>

                <TextView
                    android:id="@+id/sub_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_five"
                    android:text="@string/sub_types"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_types_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sub_types"
                    android:layout_marginTop="10dp"/>

                <View
                    android:id="@+id/divider_six"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/sub_types_recycler"/>

                <TextView
                    android:id="@+id/resistances"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_six"
                    android:text="@string/resistances"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/resistances_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/resistances"
                    android:layout_marginTop="10dp"/>

                <View
                    android:id="@+id/divider_seven"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/resistances_recycler"/>

                <TextView
                    android:id="@+id/weaknesses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_seven"
                    android:text="@string/weaknesses"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weaknesses_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weaknesses"
                    android:layout_marginTop="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>